superbitty/tests/ui/BitFieldCompatible/union.rs
use superbitty::BitFieldCompatible;

#[derive(BitFieldCompatible)]
union Bar {}

fn main() {}
